tests/baselines/reference/iterableArrayPattern28.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts(2,24): error TS2763: No overload matches this call.
  Overload 1 of 3, '(iterable: Iterable<readonly [string, number]>): Map<string, number>', gave the following error.
    Argument of type '([string, number] | [string, boolean])[]' is not assignable to parameter of type 'Iterable<readonly [string, number]>'.
      Types of property '[Symbol.iterator]' are incompatible.
        Type '() => IterableIterator<[string, number] | [string, boolean]>' is not assignable to type '() => Iterator<readonly [string, number]>'.
          Type 'IterableIterator<[string, number] | [string, boolean]>' is not assignable to type 'Iterator<readonly [string, number]>'.
            Types of property 'next' are incompatible.
              Type '(value?: any) => IteratorResult<[string, number] | [string, boolean]>' is not assignable to type '(value?: any) => IteratorResult<readonly [string, number]>'.
                Type 'IteratorResult<[string, number] | [string, boolean]>' is not assignable to type 'IteratorResult<readonly [string, number]>'.
                  Type '[string, number] | [string, boolean]' is not assignable to type 'readonly [string, number]'.
                    Type '[string, boolean]' is not assignable to type 'readonly [string, number]'.
                      Types of property '1' are incompatible.
                        Type 'boolean' is not assignable to type 'number'.
  Overload 2 of 3, '(entries?: readonly (readonly [string, number])[]): Map<string, number>', gave the following error.
    Type 'true' is not assignable to type 'number'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts (1 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
    takeFirstTwoEntries(...new Map([["", 0], ["hello", true]]));
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2763: No overload matches this call.
!!! error TS2763:   Overload 1 of 3, '(iterable: Iterable<readonly [string, number]>): Map<string, number>', gave the following error.
!!! error TS2763:     Argument of type '([string, number] | [string, boolean])[]' is not assignable to parameter of type 'Iterable<readonly [string, number]>'.
!!! error TS2763:       Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2763:         Type '() => IterableIterator<[string, number] | [string, boolean]>' is not assignable to type '() => Iterator<readonly [string, number]>'.
!!! error TS2763:           Type 'IterableIterator<[string, number] | [string, boolean]>' is not assignable to type 'Iterator<readonly [string, number]>'.
!!! error TS2763:             Types of property 'next' are incompatible.
!!! error TS2763:               Type '(value?: any) => IteratorResult<[string, number] | [string, boolean]>' is not assignable to type '(value?: any) => IteratorResult<readonly [string, number]>'.
!!! error TS2763:                 Type 'IteratorResult<[string, number] | [string, boolean]>' is not assignable to type 'IteratorResult<readonly [string, number]>'.
!!! error TS2763:                   Type '[string, number] | [string, boolean]' is not assignable to type 'readonly [string, number]'.
!!! error TS2763:                     Type '[string, boolean]' is not assignable to type 'readonly [string, number]'.
!!! error TS2763:                       Types of property '1' are incompatible.
!!! error TS2763:                         Type 'boolean' is not assignable to type 'number'.
!!! error TS2763:   Overload 2 of 3, '(entries?: readonly (readonly [string, number])[]): Map<string, number>', gave the following error.
!!! error TS2763:     Type 'true' is not assignable to type 'number'.